@@ -70,6 +70,7 @@ AC_ARG_ENABLE(dnslists, [AC_HELP_STRING([--disable-dnslists],[disable DNS B/W li
 AC_ARG_ENABLE(digest, [AC_HELP_STRING([--disable-digest],[disable digest black lists])])
 AC_ARG_ENABLE(dupmsg, [AC_HELP_STRING([--disable-dupmsg],[disable duplicate message tracking])])
 AC_ARG_ENABLE(emew, [AC_HELP_STRING([--disable-emew],[disable EMEW support])])
+AC_ARG_ENABLE(freemail, [AC_HELP_STRING([--disable-freemail],[disable free mail source testing])])
 AC_ARG_ENABLE(four21, [AC_HELP_STRING([--enable-four21],[enable 421-unknown-IP support (experimental)])])
 AC_ARG_ENABLE(fpscand, [AC_HELP_STRING([--disable-fpscand],[disable F-Prot AV support])])
 AC_ARG_ENABLE(grey, [AC_HELP_STRING([--disable-grey],[disable grey-listing])])
@@ -101,6 +102,7 @@ AS_IF([test ${enable_digest:='yes'} = 'yes'],[AC_DEFINE_UNQUOTED(FILTER_DIGEST)]
 AS_IF([test ${enable_dnslists:='yes'} = 'yes'],[AC_DEFINE_UNQUOTED(FILTER_RBL)])
 AS_IF([test ${enable_dupmsg:='yes'} = 'yes'],[AC_DEFINE_UNQUOTED(FILTER_DUPMSG)])
 AS_IF([test ${enable_emew:='yes'} = 'yes'],[AC_DEFINE_UNQUOTED(FILTER_EMEW)])
+AS_IF([test ${enable_freemail:='yes'} = 'yes'],[AC_DEFINE_UNQUOTED(FILTER_FREEMAIL)])
 AS_IF([test ${enable_four21:='no'} = 'yes'],[AC_DEFINE_UNQUOTED(FILTER_FOUR21)])
 AS_IF([test ${enable_fpscand:='yes'} = 'yes'],[enable_save='yes'; AC_DEFINE_UNQUOTED(FILTER_FPSCAND)])
 AS_IF([test ${enable_grey:='yes'} = 'yes'],[AC_DEFINE_UNQUOTED(FILTER_GREY)])
